--- a/python/src/pycryptosat.cpp.in
+++ b/python/src/pycryptosat.cpp.in
@@ -91,6 +91,9 @@ typedef struct {
     std::vector<Lit> tmp_cl_lits;
 } Solver;
 
+static int add_clauses_array(Solver *self, PyObject *clauses);
+
+
 static const char solver_create_docstring[] = \
 "Solver(verbose=0, time_limit=0.0, confl_limit=0, threads=1)\n\
 Create Solver object.\n\
@@ -279,17 +282,37 @@ PyDoc_STRVAR(add_clause_doc,
 Add a clause to the solver.\n\
 \n\
 :param clause: An iterable containing literals (ints)\n\
-:type clause: <list>"
+    Alternatively, this can be a flat array.array (typecode 'i', 'l', or 'q')\n\
+    of zero separated and terminated clauses of literals (ints).\n\
+:type clause: <list> or <array.array>"
 );
 
 static PyObject* add_clause(Solver *self, PyObject *args, PyObject *kwds)
 {
-    static char const *kwlist[] = {"clause", NULL};
+    static char const *kwlist[] = {"clause", "max_var", NULL};
     PyObject *clause;
-    if (!PyArg_ParseTupleAndKeywords(args, kwds, "O", const_cast<char**>(kwlist), &clause)) {
+    long int max_var = 0;
+    if (!PyArg_ParseTupleAndKeywords(args, kwds, "O|l", const_cast<char**>(kwlist), &clause, &max_var)) {
         return NULL;
     }
+    if (max_var > (long int)self->cmsat->nVars()) {
+        self->cmsat->new_vars(max_var-(long int)self->cmsat->nVars());
+    }
 
+    /* Handle array.array objects */
+    if (
+        PyObject_HasAttr(clause, PyUnicode_FromString("buffer_info")) &&
+        PyObject_HasAttr(clause, PyUnicode_FromString("typecode")) &&
+        PyObject_HasAttr(clause, PyUnicode_FromString("itemsize"))
+    ) {
+        int ret = add_clauses_array(self, clause);
+        if (ret == 0 || PyErr_Occurred()) {
+            return NULL;
+        }
+        Py_RETURN_NONE;
+    }
+
+    /* Handle builtins iterables */
     if (!_add_clause(self, clause)) {
         return NULL;
     }
