--- a/python/src/pycryptosat.cpp.in
+++ b/python/src/pycryptosat.cpp.in
@@ -1163,11 +1163,11 @@ was unsatisfiable.\n\
 
 static PyObject* get_conflict(Solver *self)
 {
-    const std::vector<Lit> conflicts = self->cmsat->get_conflict();
-    PyObject *result = PyList_New(0);
+    const std::vector<Lit>& conflicts = self->cmsat->get_conflict();
+    PyObject *incorrect_assumptions = PyList_New((Py_ssize_t) conflicts.size());
 
     for (unsigned long i = 0; i < conflicts.size(); i++) {
-        Lit lit = conflicts[i];
+        const Lit &lit = conflicts[i];
         long value = lit.var() + 1;
 
         if (lit.sign()) {
@@ -1180,10 +1180,10 @@ static PyObject* get_conflict(Solver *self)
         PyObject *item = PyInt_FromLong(value);
         #endif
 
-        PyList_Append(result, item);
+        PyList_SET_ITEM(incorrect_assumptions, i, item);
     }
 
-    return result;
+    return incorrect_assumptions;
 }
 
 /*************************** Method definitions *************************/
@@ -1197,7 +1197,7 @@ static PyMethodDef Solver_methods[] = {
     {"nb_clauses", (PyCFunction) nb_clauses, METH_NOARGS, nb_clauses_doc},
     {"msolve_selected", (PyCFunction) msolve_selected, METH_VARARGS | METH_KEYWORDS, msolve_selected_doc},
     {"is_satisfiable", (PyCFunction) is_satisfiable, METH_NOARGS, is_satisfiable_doc},
-    {"get_conflict", (PyCFunction) get_conflict, METH_VARARGS | METH_KEYWORDS, get_conflict_doc},
+    {"get_conflict", (PyCFunction) get_conflict, METH_NOARGS, get_conflict_doc},
 
     {"start_getting_small_clauses", (PyCFunction) start_getting_small_clauses, METH_VARARGS | METH_KEYWORDS, start_getting_small_clauses_doc},
     {"get_next_small_clause", (PyCFunction) get_next_small_clause, METH_NOARGS, get_next_small_clause_doc},
