--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -32,7 +32,7 @@ from setuptools import setup, Extension
 from setuptools.command.build_ext import build_ext as _build_ext
 from setuptools.command.test import test as _test
 
-__PACKAGE_VERSION__ = "0.6.1"
+__PACKAGE_VERSION__ = "0.7.0dev1"
 __LIBRARY_VERSION__ = "${CMS_FULL_VERSION}"
 
 ################################################################################
